Se normaliza config cors